--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,8 +26,10 @@
     "@mikro-orm/mongodb": "^5.4.2",
     "@mikro-orm/nestjs": "^5.1.2",
     "@mikro-orm/reflection": "^5.4.2",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.3",
     "@nestjs/jwt": "^9.0.0",
@@ -37,12 +39,16 @@
     "@nestjs/throttler": "^3.0.0",
     "apollo-server-express": "^3.10.3",
     "bcrypt": "^5.1.0",
+    "blinkdb": "^0.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
+    "handlebars": "^4.7.7",
     "helmet": "^6.0.0",
+    "nodemailer": "^6.8.0",
+    "nodemailer-direct-transport": "^3.3.2",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
@@ -60,6 +66,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.0",
     "@types/node": "^18.11.5",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.11",
