--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /apps/web-app/src/assets/locales/en.json
-    translation: '%original_path%/%two_letters_code%.json'
+    translation: /apps/web-app/src/assets/translations/%two_letters_code%.json
